eks/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trivial-bank-api-deployment
  labels:
    app: trivial-bank-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trivial-bank-api
  template:
    metadata:
      labels:
        app: trivial-bank-api
    spec:
      containers:
        - name: trivial-bank-api
          image: AWS_ACCOUNT_ID_PLACEHOLDER.dkr.ecr.us-east-2.amazonaws.com/trivialbank:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
