eks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trivial-bank-ingress
spec:
  ingressClassName: "nginx"
  rules:
    - host: api.terraverdeconsulting.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: trivial-bank-api-service
                port:
                  number: 80
